--- a/satzung.tex
+++ b/satzung.tex
@@ -91,7 +91,7 @@
                 Der Vorstand besteht aus dem 1. Vorsitzenden.
             \item \textbf{Vertretungsberechtigung} \newline
                 Vertretungsberechtigt sind alle Gründungsmitglieder. 
-                Durch Beschluss der Mitgliederversammlung können Vorstandsmitglieder von den Beschränkungen des § 181 BGB befreit werden.
+                Durch Beschluss der Mitgliederversammlung können Vorstandsmitglieder von den Beschränkungen des \S 181 BGB befreit werden.
             \item \textbf{Aufgaben} \newline
                 Der Vorstand führt die Geschäfte und vertritt den Verein in sämtlichen Angelegenheiten
                 gerichtlich und außergerichtlich. Darüber hinaus hat er insbesondere folgende Aufgaben:
@@ -146,6 +146,7 @@
                 Sie müssen eine Woche vor der Versammlung dem Vorstand schriftlich mit Begründung
                 vorliegen. Der Versammlungsleiter hat die Ergänzung zu Beginn der Versammlung bekannt
                 zu geben.
+                Jede Versammlung ist mit dem Abspielen der Vereinshymne \dq{} Heute schütte ich mich zu\dq{} von Karl Dall zu beginnen.
             \item \textbf{Beschlussfähigkeit} \newline
                 Die Mitgliederversammlung bei Anwesenheit von 2/3 der Mitglieder beschlussfähig.
             \item \textbf{Beschlussfassung} \newline
