--- a/satzung.tex
+++ b/satzung.tex
@@ -10,14 +10,14 @@
 % Enumerations are formatted like (1), (2), ...
 \setenumerate[1]{label={(\arabic*)}}
 
-\title{Satzung eines nicht gemeinnützigen, nicht eingetragenen Vereins}
-\author{Hahn und Ballsportverein Aachen}
+\title{Satzung eines nicht-gemeinnützigen, nicht eingetragenen Vereins}
+\author{Hahn- oder Ballsportverein Aachen}
 
 \begin{document}
     \maketitle
     \section{Name, Sitz und Geschäftsjahr}
         \begin{enumerate}
-            \item Der Verein führt den Namen \dq Hahn- und Ballsportverein Aachen \dq.
+            \item Der Verein führt den Namen \dq Hahn- oder Ballsportverein Aachen\dq.
             \item Der Verein hat seinen Sitz in Aachen, Deutschland.
             \item Geschäftsjahr ist das Kalenderjahr.
         \end{enumerate}
@@ -25,6 +25,8 @@
         \begin{enumerate}
             \item \textbf{Steuerbegünstigte Zwecke} \newline
                 Der Verein verfolgt keine gemeinnützigen Zwecke.
+            \item \textbf{Sonstige Zwecke} \newline
+                Der Verein verfolgt die Ausführung von Hahn- und/oder Ballsport als Gruppenbeschäftigung auf internationaler Ebene.
             \item \textbf{Maßnahmen} \newline
                 Der Satzungszweck wird insbesondere durch den Vorsitzenden verwirklicht.
             \item \textbf{Gemeinnützigkeit} \newline
@@ -45,8 +47,8 @@
                 Gegen die Ablehnung steht dem Bewerber kein Rechtsmittel zu.
                 Bei Aufnahme ist zeitnah™ ein einmaliger Mitgliedsausweis zu fertigen. Dieser Mitgliedsausweis ist nur laminiert gültig. 
             \item \textbf{Beiträge} \newline
-                Mitglieder entrichten einen Jahresbeitrag. 
-                Der Jahresbeitrag ist in Form eines Kasten beliebigen Bieres oder einer Flasche feinster Spirituosen zu begleichen. 
+                Mitglieder entrichten keinen Jahresbeitrag. 
+                Eine Aufwandentschädigung ist in Form eines Kasten beliebigen Bieres oder einer Flasche feinster Spirituosen vorzubringen. 
         \end{enumerate}
     \section{Beendigung der Mitgliedschaft}
         \begin{enumerate}
@@ -60,7 +62,7 @@
                 Der Austritt eines Mitgliedes erfolgt durch schriftliche Erklärung gegenüber dem
                 Vorstand. Der Austritt ist jederzeit möglich.
             \item \textbf{Ausschluss} \newline
-                Bspw. Ein Mitglied kann durch Beschluss des Vorstands mit sofortiger Wirkung aus
+                Ein Mitglied kann durch Beschluss des Vorstands mit sofortiger Wirkung aus
                 wichtigem Grund aus dem Verein ausgeschlossen werden, wenn ein wichtiger Grund die
                 Fortführung der Mitgliedschaft für den Verein oder seine Mitglieder*innen unzumutbar
                 erscheinen lässt.
@@ -81,7 +83,7 @@
                 ihrer Adressdaten unverzüglich zu informieren.
         \end{enumerate}
     \section{Die Organe des Vereins}
-        Die Organse des Vereins sind
+        Die Organe des Vereins sind
         \begin{itemize}
             \item die Mitgliederversammlung;
             \item der Vorstand.
@@ -91,7 +93,7 @@
                 Der Vorstand besteht aus dem 1. Vorsitzenden.
             \item \textbf{Vertretungsberechtigung} \newline
                 Vertretungsberechtigt sind alle Gründungsmitglieder. 
-                Durch Beschluss der Mitgliederversammlung können Vorstandsmitglieder von den Beschränkungen des \S 181 BGB befreit werden.
+                Durch Beschluss der Mitgliederversammlung können Vorstandsmitglieder von den Beschränkungen des § 181 BGB befreit werden.
             \item \textbf{Aufgaben} \newline
                 Der Vorstand führt die Geschäfte und vertritt den Verein in sämtlichen Angelegenheiten
                 gerichtlich und außergerichtlich. Darüber hinaus hat er insbesondere folgende Aufgaben:
@@ -99,7 +101,7 @@
                     \item Vorbereitung und Einberufung der Mitgliederversammlung;
                     \item Aufstellen der Tagesordnung;
                     \item Ausführung der Beschlüsse der Mitgliederversammlung;
-                    \item Führen der Bücher;
+                    \item Führen der Bücher.
                 \end{itemize}
                 Der Vorstand hat bei der täglichen \dq Hahn oder Ball? \dq-Wahl ein 1,5-faches Stimmrecht und kann so bei Gleichstand die Wahl zu seinen Gunsten beeinflussen.
             \item \textbf{Wahl} \newline
@@ -146,7 +148,6 @@
                 Sie müssen eine Woche vor der Versammlung dem Vorstand schriftlich mit Begründung
                 vorliegen. Der Versammlungsleiter hat die Ergänzung zu Beginn der Versammlung bekannt
                 zu geben.
-                Jede Versammlung ist mit dem Abspielen der Vereinshymne \dq{} Heute schütte ich mich zu\dq{} von Karl Dall zu beginnen.
             \item \textbf{Beschlussfähigkeit} \newline
                 Die Mitgliederversammlung bei Anwesenheit von 2/3 der Mitglieder beschlussfähig.
             \item \textbf{Beschlussfassung} \newline
