fix: wrong quotation marks and spacing

--- a/satzung.tex
+++ b/satzung.tex
@@ -11,13 +11,13 @@
 \setenumerate[1]{label={(\arabic*)}}
 
 \title{Satzung eines nicht gemeinnützigen, nicht eingetragenen Vereins}
-\author{Hahn und Ballsportverein Aachen}
+\author{Hahn- und Ballsportverein Aachen}
 
 \begin{document}
     \maketitle
     \section{Name, Sitz und Geschäftsjahr}
         \begin{enumerate}
-            \item Der Verein führt den Namen \dq Hahn- und Ballsportverein Aachen \dq.
+            \item Der Verein führt den Namen ``Hahn- und Ballsportverein Aachen''.
             \item Der Verein hat seinen Sitz in Aachen, Deutschland.
             \item Geschäftsjahr ist das Kalenderjahr.
         \end{enumerate}
@@ -101,7 +101,7 @@
                     \item Ausführung der Beschlüsse der Mitgliederversammlung;
                     \item Führen der Bücher;
                 \end{itemize}
-                Der Vorstand hat bei der täglichen \dq Hahn oder Ball? \dq-Wahl ein 1,5-faches Stimmrecht und kann so bei Gleichstand die Wahl zu seinen Gunsten beeinflussen.
+                Der Vorstand hat bei der täglichen ``Hahn oder Ball?''-Wahl ein 1,5-faches Stimmrecht und kann so bei Gleichstand die Wahl zu seinen Gunsten beeinflussen.
             \item \textbf{Wahl} \newline
                 Die Vorstandsmitglieder werden von der Mitgliederversammlung für die Dauer von 1 Jahr
                 gewählt. Wiederwahl ist möglich. Der Vorstand wird von der
@@ -146,7 +146,7 @@
                 Sie müssen eine Woche vor der Versammlung dem Vorstand schriftlich mit Begründung
                 vorliegen. Der Versammlungsleiter hat die Ergänzung zu Beginn der Versammlung bekannt
                 zu geben.
-                Jede Versammlung ist mit dem Abspielen der Vereinshymne \dq{} Heute schütte ich mich zu\dq{} von Karl Dall zu beginnen.
+                Jede Versammlung ist mit dem Abspielen der Vereinshymne ``Heute schütte ich mich zu'' von Karl Dall zu beginnen.
             \item \textbf{Beschlussfähigkeit} \newline
                 Die Mitgliederversammlung bei Anwesenheit von 2/3 der Mitglieder beschlussfähig.
             \item \textbf{Beschlussfassung} \newline
