Add neue Vorstandsmitglieder

--- a/satzung.tex
+++ b/satzung.tex
@@ -90,7 +90,7 @@
         \end{itemize}
         \begin{enumerate}
             \item \textbf{Anzahl der Vorstandsmitglieder} \newline
-                Der Vorstand besteht aus dem 1. Vorsitzenden.
+                Der Vorstand besteht aus dem 1. Vorsitzenden, dem Abteilungsleiter Ball und dem Abteilungsleiter Hahn.
             \item \textbf{Vertretungsberechtigung} \newline
                 Vertretungsberechtigt sind alle Gründungsmitglieder. 
                 Durch Beschluss der Mitgliederversammlung können Vorstandsmitglieder von den Beschränkungen des § 181 BGB befreit werden.
