fix: bisschen besseres gender-symbol
Signed-off-by: Alexander Bartolomey <occloxium@gmail.com>

--- a/satzung.tex
+++ b/satzung.tex
@@ -30,7 +30,7 @@
             \item \textbf{Gemeinnützigkeit} \newline
                 Der Verein ist selbstlos tätig; er verfolgt nicht in erster Linie eigenwirtschaftliche Zwecke. Mittel
                 des Vereins dürfen nur für die satzungsmäßigen Zwecke verwendet werden. Die
-                Mitglieder*innen erhalten keine Zuwendungen aus Mitteln des Vereins. Es darf keine Person
+                Mitglieder:innen erhalten keine Zuwendungen aus Mitteln des Vereins. Es darf keine Person
                 durch Ausgaben, die dem Zweck des Vereins fremd sind, oder durch unverhältnismäßig hohe
                 Vergütungen begünstigt werden.
         \end{enumerate}
@@ -62,7 +62,7 @@
             \item \textbf{Ausschluss} \newline
                 Bspw. Ein Mitglied kann durch Beschluss des Vorstands mit sofortiger Wirkung aus
                 wichtigem Grund aus dem Verein ausgeschlossen werden, wenn ein wichtiger Grund die
-                Fortführung der Mitgliedschaft für den Verein oder seine Mitglieder*innen unzumutbar
+                Fortführung der Mitgliedschaft für den Verein oder seine Mitglieder:innen unzumutbar
                 erscheinen lässt.
                 Ein solcher wichtiger Grund liegt insbesondere dann vor, wenn das Mitglied trotz Mahnung
                 länger als sechs Monate mit seiner Beitragszahlung im Rückstand ist oder den
@@ -125,8 +125,8 @@
             \item \textbf{Präsenzversammlung und virtuelle Mitgliederversammlung} \newline
                 Die Mitgliederversammlung kann als Präsenzversammlung oder als virtuelle
                 Mitgliederversammlung abgehalten werden. Zur Präsenzversammlung treffen sich alle
-                Teilnehmer*innen der Mitgliederversammlung an einem gemeinsamen Ort. Die virtuelle
-                Mitgliederversammlung erfolgt durch Einwahl aller Teilnehmer*innen in eine Video- oder
+                Teilnehmer:innen der Mitgliederversammlung an einem gemeinsamen Ort. Die virtuelle
+                Mitgliederversammlung erfolgt durch Einwahl aller Teilnehmer:innen in eine Video- oder
                 Telefonkonferenz. Eine Kombination von Präsenzversammlung und virtueller
                 Mitgliederversammlung ist möglich, indem den Mitgliedern die Möglichkeit eröffnet wird, an der
                 Präsenzversammlung mittels Video- oder Telefonkonferenz teilzunehmen. Der Vorstand
@@ -160,7 +160,7 @@
                 Über die Beschlüsse der Mitgliederversammlung ist ein Protokoll aufzunehmen, das vom
                 jeweiligen Versammlungsleiter und dem Protokollführer zu unterzeichnen ist.
             \item \textbf{Wahlen} \newline
-                Für Wahlen gilt Folgendes: Hat im ersten Wahlgang kein*e Kandidat*in die Mehrheit der
+                Für Wahlen gilt Folgendes: Hat im ersten Wahlgang kein:e Kandidat:in die Mehrheit der
                 abgegebenen gültigen Stimmen erreicht, findet eine Stichwahl zwischen den Kandidaten statt,
                 welche die beiden höchsten Stimmenzahlen erreicht haben.
             \item \textbf{Aufgabenbereiche} \newline
@@ -173,7 +173,7 @@
                 \end{itemize}
             \item \textbf{Versammlungsleitung} \newline  
                 Die Mitgliederversammlung wird vom Vorstand geleitet. Ist dieser nicht anwesend, so bestimmt die Versammlung den Leiter mit einfacher
-                Mehrheit der abgegebenen Stimmen. Der Versammlungsleiter bestimmt einen Protokollführer.    
+                Mehrheit der abgegebenen Stimmen. Der Versammlungsleiter bestimmt einen Protokollführer.
         \end{enumerate}
     \section{Außerordentliche Mitgliederversammlung}
         Eine außerordentliche Mitgliederversammlung findet statt, wenn das Interesse des
