Fix singular form in §5 (4)

--- a/satzung.tex
+++ b/satzung.tex
@@ -108,9 +108,9 @@
                 Die Vorstandsmitglieder werden von der Mitgliederversammlung für die Dauer von 1 Jahr
                 gewählt. Wiederwahl ist möglich. Der Vorstand wird von der
                 Mitgliederversammlung im gesonderten Wahlgang bestimmt. 
-                Das jeweils amtierenden Vorstandsmitglieder bleibt nach Ablauf ihrer Amtszeit so lange im Amt, bis
-                sein Nachfolger gewählt ist. 
-                Scheidet der Vorstand vor Ablauf der Amtszeit aus, muss eine sofortige Neuwahl im einer außergewöhnlichen Mitgliederversammlung gewählt werden.
+                Die jeweils amtierenden Vorstandsmitglieder bleiben nach Ablauf ihrer Amtszeit so lange im Amt, bis
+                ihre Nachfolger gewählt sind. 
+                Scheidet ein Vorstandsmitglied vor Ablauf der Amtszeit aus, muss eine sofortige Neuwahl im einer außergewöhnlichen Mitgliederversammlung gewählt werden.
             \item \textbf{Vergütung} \newline
                 Der Vorstand ist grundsätzlich ehrenamtlich tätig.
             \item \textbf{Haftungsbeschränkung} \newline    
