Fix the rebarbative quotations

--- a/satzung.tex
+++ b/satzung.tex
@@ -3,6 +3,7 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage[ngerman]{babel}
+\usepackage{csquotes}
 
 % Begin sections with the paragraph sign
 \titleformat{\section}{\normalfont\Large\bfseries}{\S\thesection}{1em}{}
@@ -17,7 +18,7 @@
     \maketitle
     \section{Name, Sitz und Geschäftsjahr}
         \begin{enumerate}
-            \item Der Verein führt den Namen ``Hahn- oder Ballsportverein Aachen''.
+            \item Der Verein führt den Namen \enquote{Hahn- oder Ballsportverein Aachen}.
             \item Der Verein hat seinen Sitz in Aachen, Deutschland.
             \item Geschäftsjahr ist das Kalenderjahr.
         \end{enumerate}
@@ -103,7 +104,7 @@
                     \item Ausführung der Beschlüsse der Mitgliederversammlung;
                     \item Führen der Bücher.
                 \end{itemize}
-                Der Vorstand hat bei der täglichen ``Hahn oder Ball?''-Wahl ein 1,5-faches Stimmrecht und kann so bei Gleichstand die Wahl zu seinen Gunsten beeinflussen.
+                Der Vorstand hat bei der täglichen \enquote{Hahn oder Ball?}-Wahl ein 1,5-faches Stimmrecht und kann so bei Gleichstand die Wahl zu seinen Gunsten beeinflussen.
             \item \textbf{Wahl} \newline
                 Die Vorstandsmitglieder werden von der Mitgliederversammlung für die Dauer von 1 Jahr
                 gewählt. Wiederwahl ist möglich. Der Vorstand wird von der
